--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "react-native-highcharts",
-  "version": "1.1",
-  "description":
-    "JavaScript implementation of a view container that can flip between its front and back, where the back has a console.log and the front is your aplication.",
-  "main": "react-native-highcharts.js",
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+  "_from": "react-native-highcharts",
+  "_id": "react-native-highcharts@1.0.2",
+  "_inBundle": false,
+  "_integrity": "sha512-Oz4nEXENg07S3l9Wo9eZvAr7WIH/Mbhjh1XQaUh19zJFWTPAmEANjlkF50xNoE3kkXXpgg5WjDE6Uge0UKhwQQ==",
+  "_location": "/react-native-highcharts",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "react-native-highcharts",
+    "name": "react-native-highcharts",
+    "escapedName": "react-native-highcharts",
+    "rawSpec": "",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/TradingPal/react-native-highcharts"
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-highcharts/-/react-native-highcharts-1.0.2.tgz",
+  "_shasum": "cb8269efc5dbd7d550d2d68b3ac008b24bfba6bb",
+  "_spec": "react-native-highcharts",
+  "_where": "/Volumes/Data/ReactNative/WebHR_Mobile",
+  "author": {
+    "name": "Infinity0106"
   },
+  "bugs": {
+    "url": "https://github.com/TradingPal/react-native-highcharts/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "JavaScript implementation of a view container that can flip between its front and back, where the back has a console.log and the front is your aplication.",
+  "homepage": "https://github.com/TradingPal/react-native-highcharts#readme",
   "keywords": [
     "react-native",
     "react-component",
@@ -20,10 +41,16 @@
     "WebView",
     "HighCharts"
   ],
-  "author": "Infinity0106",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/TradingPal/react-native-highcharts/issues"
+  "main": "react-native-highcharts.js",
+  "name": "react-native-highcharts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TradingPal/react-native-highcharts.git"
   },
-  "homepage": "https://github.com/TradingPal/react-native-highcharts#readme"
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "version": "1.0.2"
 }
